--- a/fxs-platform-web/src/main/resources/templates/fragments/header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<head th:fragment="public-header-css">
+<head th:fragment="header-css">
 	<title>上海小帅信息科技有限公司</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -11,7 +11,7 @@
 	<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
 	<script th:src="@{/js/ui-choose.js}"></script>
 </head>
-<div class="container" th:fragment="public-header">
+<div class="container" th:fragment="header">
 	<div class="row">
 		<div class="col-md-4">
 			<div>
