--- a/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/public_header :: public-header-css" ></head>
+<head th:replace="fragments/header :: header-css" ></head>
 <body>
 	<div class="img-responsive img-lawywerSign col-md-12">
-		<div th:replace="fragments/public_header :: public-header" ></div>
+		<div th:replace="fragments/header :: header" ></div>
 		<div class="container">
 			<div class="col-md-12 lawsuit-content" >
 				<h3 class="heading">海量免费资源 不成功委托不收费</h3>
