--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/public_header :: public-header-css" ></head>
+<head th:replace="fragments/header :: header-css" ></head>
 <body>
 	<div class="img-responsive img-lawsuit">
-		<div th:replace="fragments/public_header :: public-header" ></div>
+		<div th:replace="fragments/header :: header" ></div>
 		<div class="container">
 	      <div class="col-md-12 lawsuit-content" >
 	        <h3 class="heading">竞标找律师</h3>
