--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_self_service.html
@@ -1,32 +1,29 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<div th:replace="fragments/public_header_style_2 :: public-header-2-css"></div>
-</head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<head th:replace="fragments/header :: header-css"></head>
 <body>
-	<div th:replace="fragments/public_header_style_2 :: public-header-2"></div>
+	<div class="topBar col-md-12">
+		<div th:replace="fragments/header :: header"></div>
+	</div>
 	<div class="mainPart">
-	  	<div class="container">
-		    <h1>自助打官司</h1>
-		    <p>律师帮您扫除专业障碍，让您自己就能轻松打官司。</p>
-			  <div class="video">
-			  	<!-- 
-	       		<embed height="415" 
-	       		       width="544" 
-	       		       quality="high" 
-	       		       allowfullscreen="true" 
-	       			   type="application/x-shockwave-flash" src="//static.hdslb.com/miniloader.swf" 
-	       			   flashvars="aid=15866376&page=1" 
-	       			   pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">
-	       		</embed>
-	       		 -->
-	       		 <video controls="controls" autoplay="autoplay">
-				  <source src="http://www.w3school.com.cn/i/movie.ogg" type="video/ogg" />
-				  <source src="http://www.w3school.com.cn/i/movie.mp4" type="video/mp4" />
-				</video>
-		    </div>
-	  	</div>
-	  </div>
+		<div class="container">
+			<div class="containerWapper">
+				<div class="text-center">
+					<h1>自助打官司</h1>
+					<p>律师帮您扫除专业障碍，让您自己就能轻松打官司。</p>
+				</div>
+
+				<div class="video">
+					<video id="myVideo" width="520" height="276" controls="controls" autoplay="autoplay">
+						<source src="http://www.w3school.com.cn/i/movie.ogg" type="video/ogg" />
+						<source src="http://www.w3school.com.cn/i/movie.mp4" type="video/mp4" />
+						Your browser does not support HTML5 video.
+					</video>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
