--- a/fxs-platform-web/src/main/resources/templates/userSignIn.html
+++ b/fxs-platform-web/src/main/resources/templates/userSignIn.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments/public_header :: public-header-css"></head>
+<head th:replace="fragments/header :: header-css"></head>
 <body class="loginBGWhite">
 	<div class="img-responsive">
 		<div class="topBar col-md-12" style="background-image: none">
-			<div th:replace="fragments/public_header :: public-header"></div>
+			<div th:replace="fragments/header :: header"></div>
 		</div>
 		<div class="container">
 	      <div class="row loginWapper d-flex align-items-center" style="height: 100%">
@@ -33,7 +33,7 @@
 					</div>
 					<div class="form-group row">
 					  <div class="col-sm-12">
-						<input type="text" class="form-control" placeholder="请输入密码" th:name="password" th:id="password"></input>
+						<input type="password" class="form-control" placeholder="请输入密码" th:name="password" th:id="password"></input>
 						</div>
 					</div>
 					<div class="form-group row">
