添加过期时间

--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
@@ -112,9 +112,10 @@
 					}),
 					contentType : "application/json; charset=utf-8",
 					success : function(data) {
+						$("#buyConsulting").modal('hide');
 						$("#modalContent").empty().append("电话咨询提交成功")
 						$("#contactPhone").val('');
-						$("#buyConsulting").modal('hide');
+						$("#researvationDatetime").val('');
 						$("#notificationModal").modal("show")
 					},
 					error : function(error) {
