添加一级类型过滤条件 律师咨询池页面

--- a/fxs-platform-web/src/main/resources/templates/lawyer_consulting_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_consulting_detail.html
@@ -103,7 +103,7 @@
 									</ul>
 								</div>
 								<div class="row" 
-									th:if="${not #list.isEmpty(caseDetailInfo.qaMapping)}"
+									th:if="${not #lists.isEmpty(caseDetailInfo.qaMapping)}"
 									th:each="qaMapping : ${caseDetailInfo.qaMapping}">
 									<ul>
 										<li>问题： <span th:text="${qaMapping.questionDesc}"></span></li>
