--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -19,28 +19,33 @@
 									<div class="col-md-6">
 										<div class="row">
 											<div class="col-md-2 col-sm-3 sLabel mycaseLabel">
-												<label>案件编号：</label>
+												<label>案件类型：</label>
 											</div>
 											<div class="col-md-10 col-sm-10">
-												<input type="text" class="form-control" placeholder="输入案件编号" />
+												<select class="form-control" id="falltypusBlock">
+													<option th:value="-1">选择从属案件类型</option>
+													<option th:each="belongsToFalltypus : ${firstLevelFalltypus}" 
+															th:id="${belongsToFalltypus.id}" 
+															th:value="${belongsToFalltypus.id}" 
+															th:text="${belongsToFalltypus.name}"></option>
+												</select>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-6">
+									<div class="col-md-3">
 										<div class="row">
 											<div class="form-group col-md-2 col-sm-2 sLabel mycaseLabel">
 												<label>最近：</label>
 											</div>
 											<div class="form-group col-md-7 col-sm-7">
 												<select class="form-control">
-													<option value="">1</option>
-													<option value="">2</option>
 													<option value="">3</option>
-													<option value="">6</option>
+													<option value="">10</option>
+													<option value="">15</option>
 												</select>
 											</div>
 											<div class="form-group col-md-3 col-sm-3 sLabel">
-												<label>月有最新反馈</label>
+												<label>天</label>
 											</div>
 										</div>
 									</div>
@@ -103,10 +108,16 @@
 				}
 			})
 
+			$("#falltypusBlock").on("click", function() {
+				ids = []
+				console.log(self.value)
+				ids.push($(this).find("option:selected").attr("id"))
+			})
+			
 			$("#searchConsultingWithFilter").on("click", function() {
 				$.ajax({
 					type : 'GET',
-					url : "/user/case?caseType=0&" + (viewUnRead == 'N' ? "isRead=N" : "isRead=Y")
+					url : "/user/case?parentType=" + ids + "&caseType=0&feedbackCount=10&status=5&" + (viewUnRead == 'N' ? "isRead=N" : "")
 							+ "&searchFrom=SEARCH_FROM_LAWYER_CASEPOOL&requestFrom=" + location.pathname,
 					success : function(data) {
 						console.log(data)
