--- a/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_dashboard.html
@@ -139,7 +139,7 @@
 			$("#searchCases").on("click", function() {
 				$.ajax({
 					type : 'GET',
-					url : "/user/case?parentType=" + ids + "&caseType=1&" + (viewUnRead == 'N' ? "isRead=N" : "") + "&searchFrom=SEARCH_FROM_LAWYER_DASHBOARD&requestFrom=" + location.pathname,
+					url : "/user/case?parentType=" + ids + "&caseType=1&feedbackCount=10&status=5&" + (viewUnRead == 'N' ? "isRead=N" : "") + "&searchFrom=SEARCH_FROM_LAWYER_DASHBOARD&requestFrom=" + location.pathname,
 					success : function(data) {
 						console.log(data)
 						$('#lawsuitsBlock').html(data);
